syntax = "proto3";
package linnefromice.lending.lending;

import "gogoproto/gogo.proto";
import "lending/lending/params.proto";
import "lending/lending/pair_pool.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/linnefromice/lending/x/lending/types";

// GenesisState defines the lending module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated PairPool pairPoolList = 2 [(gogoproto.nullable) = false];
  uint64 pairPoolCount = 3;
  // this line is used by starport scaffolding # genesis/proto/state
}
